package com.googlecode.firewood.protobuf;

option java_package = "com.googlecode.firewood.protobuf";
option java_outer_classname = "LoggingProtos";

message LoggingEvent {
  optional string threadName = 1;
  optional Level level = 2;
  optional string message = 3;
  repeated string arguments = 4;
  optional string formattedMessage = 5;
  optional string loggerName = 6;
  repeated CallerData callerData = 7;
  repeated MapEntry mdc = 8;
  optional int64 timestamp = 9;
  optional Throwable throwable = 10;
  optional Marker marker = 11;
  optional LoggerContext loggerContext = 12;
}

enum Level {
  ERROR = 4;
  WARN  = 3;
  INFO  = 2;
  DEBUG = 1;
  TRACE = 0;
}

message CallerData {
  optional string fileName = 1;
  optional string className = 2;
  optional string methodName = 3;
  optional int32  lineNumber = 4;
}

message MapEntry {
  required string key = 1;
  optional string value = 2;
}

message Throwable {
  optional string message = 1;
  optional string className = 2;
  repeated StackTraceElement stackTraceElements = 3;
  optional int32 commonFrames = 4;
  optional Throwable cause = 5;
}

message StackTraceElement {
    required string declaringClass = 1;
    required string methodName = 2;
    optional string fileName = 3;
    optional int32 lineNumber = 4;
}

message Marker {
  required string name = 1;
  repeated Marker marker = 2;
}

message LoggerContext {
  required string name = 1;
  repeated MapEntry properties = 2;
  required int64 birthTime = 3;

}


